# BinReminderApp

./: .gitignore  .replit  README.md  admin_routes.py  app.py  database.py  decorators.py  main.py  models.py  pyproject.toml  sms_notifications.py
migrations/versions/: 08f2627e84c4_add_postcode_and_first_login_fields_to_.py  3b1ef74c2038_add_notification_preferences_to_user_.py  6e16eeb47967_add_evening_and_morning_notification_.py  8a2d4f5e1234_add_referral_system_and_sms_credits.py  add_created_at_field_to_user.py  b5b01103b036_add_is_admin_and_emaillog_model.py
static/css/: style.css
static/js/: main.js
templates/: base.html  calendar.html  dashboard.html  first_login.html  home.html
templates/admin/: admin_layout.html  dashboard.html  email_logs.html  reminders.html  sms_logs.html  templates.html  users.html
templates/auth/: login.html  register.html
