[project]
name = "repl-nix-binreminderapp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "apscheduler>=3.10.4",
    "flask-migrate>=4.0.7",
    "telnyx>=2.1.4",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.0.4",
    "pytz>=2024.2",
    "mailersend>=0.5.8",
]
